--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+      "react-spinners": "^0.x.x"
+
   },
   "scripts": {
   "start": "react-scripts start",
